# mind

./: .gitignore  Makefile.am  bootstrap.sh  configure.ac
src/: Makefile.am  dict.c  dict.h  document.c  document.h  main.c  notes.txt  pdf.c  pdf.h  process.c  process.h  valgrind.suppr
