bin_PROGRAMS = mind pdftest

mind_SOURCES = main.c dict.c
mind_LDADD = $(POPPLER_LIBS) $(GLIB_LIBS) $(CAIRO_LIBS)
mind_CFLAGS = $(POPPLER_CFLAGS) $(GLIB_CFLAGS) $(CAIRO_CFLAGS)

pdftest_SOURCES = pdf.c dict.c
pdftest_LDADD = $(POPPLER_LIBS) $(GLIB_LIBS) $(CAIRO_LIBS)
pdftest_CFLAGS = $(POPPLER_CFLAGS) $(GLIB_CFLAGS) $(CAIRO_CFLAGS)
